# punchclock

./: .env.sample  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml
.task/: AGENTS.md
.task/done/: 01-central-config-struct.md  02-add-command.md  03-rm-command.md  04-ls-command.md  05-pause-resume-commands.md  06-multi-agent-daemon.md  07-up-command.md  08-name-resolution.md  09-tui-multi-agent.md  10-import-legacy-config.md  11-deprecate-agent-subcommand.md  12-remove-legacy-single-agent-commands.md  13-rename-server-commands.md  14-group-local-vs-server-commands.md  agent-os-daemon.md  claude-agent-daemon.md  initial-implementation.md  integration-tests.md  message-ack.md  rate-limiting.md  remote-task-list.md  shared-types-crate.md  task-source-of-truth.md  topics-channels.md  websocket-transport.md
.task/todo/: agent-auth.md  agent-os-daemon.md  broadcast-endpoint.md  claude-agent-daemon.md  cli-watch-subcommand.md  docker.md  github-actions-ci.md  integration-tests.md  persistent-storage.md  rate-limiting.md  realtime-task-channel.md  remote-task-list.md  shared-types-crate.md  task-source-of-truth.md  use-post-for-writes.md
client/: .env.sample  Cargo.toml
client/src/: agent.rs  config.rs  main.rs  tui.rs
common/: Cargo.toml
common/src/: lib.rs
server/: .env.sample  Cargo.toml
server/src/: lib.rs  main.rs
server/tests/: integration_test.rs
