[package]
name = "punchclock"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "punchclock"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dotenvy = "0.15"
toml = "0.8"
serde_yaml = "0.9"
dialoguer = "0.11"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
