[package]
name = "punchclock-server"
version = "0.2.0"
edition = "2021"

[lib]
name = "punchclock_server"
path = "src/lib.rs"

[[bin]]
name = "punchclock-server"
path = "src/main.rs"

[dependencies]
poem = "3"
poem-openapi = { version = "5", features = ["swagger-ui"] }
punchclock-common = { path = "../common", features = ["poem-openapi"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
